--- a/project3/FirstMVCApp/Views/Home/Contact.cshtml
+++ b/project3/FirstMVCApp/Views/Home/Contact.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Contact Us";
+    ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
@@ -16,5 +16,6 @@
 </address>
 
 <form>
-
+    <h3>Where the contact form would be available</h3>
+    <button>Contact Us</button>
 </form>
