--- a/project3/FirstMVCApp/Views/RITAPI/SelectedFaculty.cshtml
+++ b/project3/FirstMVCApp/Views/RITAPI/SelectedFaculty.cshtml
@@ -118,16 +118,15 @@
     <div id="myDiv2" class="img">
 
     </div>
-    <hr />
-    <hr />
-    <hr />
-    <hr />
-    <hr />
-    <hr />
-    <hr />
-    <hr />
-    <hr />
-    <hr />
-    <hr />
+    <hr /><h5>Username: </h5>
+    <hr /><h5>Tagline: </h5>
+    <hr /><h5>Title: </h5>
+    <hr /><h5>Interest Area: </h5>
+    <hr /><h5>Office: </h5>
+    <hr /><h5>Website: </h5>
+    <hr /><h5>Phone #: </h5>
+    <hr /><h5>Email: </h5>
+    <hr /><h5>Twitter: </h5>
+    <hr /><h5>Facebook: </h5>
 </form>
 
