--- a/project3/FirstMVCApp/Views/RITAPI/SelectedFaculty.cshtml
+++ b/project3/FirstMVCApp/Views/RITAPI/SelectedFaculty.cshtml
@@ -118,15 +118,38 @@
     <div id="myDiv2" class="img">
 
     </div>
-    <hr /><h5>Username: </h5>
-    <hr /><h5>Tagline: </h5>
-    <hr /><h5>Title: </h5>
-    <hr /><h5>Interest Area: </h5>
-    <hr /><h5>Office: </h5>
-    <hr /><h5>Website: </h5>
-    <hr /><h5>Phone #: </h5>
-    <hr /><h5>Email: </h5>
-    <hr /><h5>Twitter: </h5>
-    <hr /><h5>Facebook: </h5>
+    <dl class="dl-horizontal">
+
+        <dt>Username: </dt>
+        <dd>@Html.DisplayFor(model => model.username)</dd>
+
+        <dt>Tagline: </dt>
+        <dd>@Html.DisplayFor(model => model.tagline)</dd>
+
+        <dt>Title: </dt>
+        <dd>@Html.DisplayFor(model => model.title)</dd>
+
+        <dt>Interest Area: </dt>
+        <dd>@Html.DisplayFor(model => model.interestArea)</dd>
+
+        <dt>Office: </dt>
+        <dd>@Html.DisplayFor(model => model.office)</dd>
+
+        <dt>Website: </dt>
+        <dd>@Html.DisplayFor(model => model.website)</dd>
+
+        <dt>Phone: </dt>
+        <dd>@Html.DisplayFor(model => model.phone)</dd>
+
+        <dt>Email: </dt>
+        <dd>@Html.DisplayFor(model => model.email)</dd>
+
+        <dt>Twitter: </dt>
+        <dd>@Html.DisplayFor(model => model.twitter)</dd>
+
+        <dt>Facebook: </dt>
+        <dd>@Html.DisplayFor(model => model.facebook)</dd>
+
+    </dl>
 </form>
 
